--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
+<p>this is no2</p>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -56,7 +56,8 @@ A php bassed web app that uses slingshot.co.nz's API to display extra informatio
     <h2>Authors</h2>
 <p>Adriel</p>
 <h2>Contact</h2>
-<p> (admin@adriel.co.nz)<br/>      </p>
+<p> (admin@adriel.co.nz)
+<br/>      </p>
 
 
     <h2>Download</h2>
